# asyncio-socks-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  probe-449346de10bd4e1b9676a5bdc2abcafc.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  image.yml  release.yml  tests.yml
asyncio_socks_server/: __main__.py  app.py  authenticators.py  config.py  exceptions.py  logger.py  protocols.py  proxyman.py  utils.py  values.py
docs/: addon-model.md  addon-model.zh-CN.md  addon-recipes.md  addon-recipes.zh-CN.md  architecture.md  architecture.zh-CN.md  public-api.md  public-api.zh-CN.md
openspec/: config.yaml
openspec/changes/archive/2026-05-06-close-failed-connect-flows/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-06-close-failed-connect-flows/specs/addon-observability/: spec.md
openspec/changes/archive/2026-05-06-close-failed-connect-flows/specs/socks5-framework/: spec.md
openspec/specs/addon-observability/: spec.md
openspec/specs/socks5-framework/: spec.md
src/asyncio_socks_server/: __init__.py  __main__.py  cli.py
src/asyncio_socks_server/addons/: __init__.py  auth.py  base.py  chain.py  ip_filter.py  logger.py  manager.py  stats.py  traffic.py  udp_over_tcp_entry.py
src/asyncio_socks_server/client/: client.py
src/asyncio_socks_server/core/: address.py  logging.py  protocol.py  socket.py  types.py
src/asyncio_socks_server/server/: connection.py  server.py  tcp_relay.py  udp_over_tcp.py  udp_over_tcp_exit.py  udp_relay.py
tests/: conftest.py  e2e_helpers.py  tcp_socks_req.py  test_addon_builtins.py  test_addon_builtins_extended.py  test_addon_chain.py  test_addon_edge_cases.py  test_addon_manager.py  test_addon_stats.py  test_cli.py  test_client.py  test_client_edge_cases.py  test_concurrent.py  test_connection.py  test_core_address.py  test_core_protocol.py  test_core_socket.py  test_core_types.py  test_e2e.py  test_e2e_auth_chain.py  test_e2e_data_paths.py  test_e2e_lifecycle.py  test_e2e_policy_errors.py  test_flow.py  test_ipv6.py  test_local_tcp_protocol.py  test_logging.py  test_protocol_robustness.py  test_server.py  test_server_errors.py  test_server_lifecycle.py  test_tcp_relay.py  test_udp_associate_hook.py  test_udp_over_tcp.py  test_udp_over_tcp_e2e.py  test_udp_over_tcp_exit.py  test_udp_relay.py  test_utils.py  udp_socks_req.py
tests/static/: config.json
