[tool.poetry]
name = "asyncio_socks_server"
version = "0.1.0"
description = ""
authors = ["Amaindex <amaindex@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
autoflake = "^1.4"
PySocks = "^1.7.1"
pytest = "^6.2.5"
Sphinx = "^4.2.0"
autodocsumm = "^0.2.6"

[tool.poetry.scripts]
asyncio_socks_server = 'asyncio_socks_server.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

