[tool.poetry]
name = "asyncio-socks-server"
version = "0.3.0"
description = "A socks server implemented with asyncio."
authors = ["Amaindex <amaindex@outlook.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/Amaindex/asyncio-socks-server"

keywords = ["asynchronous","asyncio", "proxy", "socks"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Topic :: Internet :: Proxy Servers"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
autoflake = "^1.4"
PySocks = "^1.7.1"
Sphinx = "^4.2.0"
autodocsumm = "^0.2.6"
pytest = "^6.2.5"

[tool.poetry.scripts]
asyncio_socks_server = 'asyncio_socks_server.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

