[project]
name = "asyncio-socks-server"
version = "1.3.0"
description = "A SOCKS5 toolchain/framework with programmable addons"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Amaindex", email = "amaindex@outlook.com" },
]
keywords = ["asyncio", "socks5", "proxy", "addon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
]

[project.urls]
Homepage = "https://github.com/Amaindex/asyncio-socks-server"
Repository = "https://github.com/Amaindex/asyncio-socks-server"
Issues = "https://github.com/Amaindex/asyncio-socks-server/issues"

[project.scripts]
asyncio_socks_server = "asyncio_socks_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asyncio_socks_server"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = ["ruff>=0.11", "pytest>=8", "pytest-asyncio>=0.26", "pyright>=1.1"]
